welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:7: error: not found: value faceAuMur
      while (!estSurBiscuit || faceAuMur() ){
                               ^