welcome.lessons.welcome.summative.Moria.scala.code
while (!estFaceMur()){
    retourne()
  	while (!estSurBiscuit){
      avance()
      prendBiscuit()
      retourne()
      while (!estSurBiscuit || faceAuMur() ){
        avance()
      }
      poseBiscuit()
      retourne()
    }
  }
